# cloud-map

./: .gitignore  .pre-commit-config.yaml  README.md  inventory.example.yaml  pyproject.toml  run.py
.claude/: settings.local.json
docs/: architecture.md  capabilities.md  configuration.md
openspec/: project.md
openspec/changes/archive/2026-03-24-add-initial-project-scaffold/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-add-on-demand-logs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-add-pdf-export/: proposal.md  tasks.md
openspec/changes/archive/2026-03-24-add-resource-monitoring/: proposal.md  tasks.md
openspec/specs/docker-management/: spec.md
openspec/specs/documentation/: spec.md
openspec/specs/on-demand-logs/: spec.md
openspec/specs/pdf-export/: spec.md
openspec/specs/resource-monitoring/: spec.md
openspec/specs/server-connectivity/: spec.md
openspec/specs/service-health/: spec.md
openspec/specs/state-cache/: spec.md
openspec/specs/systemd-management/: spec.md
openspec/specs/web-dashboard/: spec.md
openspec/specs/web-server-discovery/: spec.md
scripts/: check-docs-updated.sh
src/cloud_map/: __init__.py  cache.py  cli.py  collector.py  config.py  display.py  docker.py  logs.py  models.py  pdf.py  resources.py  ssh.py  systemd.py  web.py  webserver.py
src/cloud_map/templates/: dashboard.html
tests/: test_cache.py  test_config.py  test_docker.py  test_logs.py  test_models.py  test_pdf.py  test_resources.py  test_systemd.py  test_web.py  test_webserver.py
(+21 files in other folders)
